--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /8-java-redes/atividade01/validar-cpf/target/
 /8-java-redes/atividade01/servidor-cliente-cpf/target/
 /8-java-redes/atividade03/servidorclientegui/target/
+/7-ejb/mavenproject2/target/
+/7-ejb/mavenproject3/target/
+/7-ejb/mavenproject4/target/
+/8-java-redes/servidorthreadsudp/target/
+/7-ejb/aula4p2servidorlocal/target/
+/8-java-redes/atividade04/servidorclienteudp/target/
