--- a/6-java-web/projetos/backend-cidades/pom.xml
+++ b/6-java-web/projetos/backend-cidades/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
