--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /8-java-redes/servidorthreadsudp/target/
 /7-ejb/aula4p2servidorlocal/target/
 /8-java-redes/atividade04/servidorclienteudp/target/
+/8-java-redes/atividade04/servidorclientethread/target/
