Renomeado pacote view para cidade

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /7-ejb/atividade/Aula4p3AcessoRemotoLib/ClienteGUI/target/
 /7-ejb/atividade/Aula4p3AcessoRemotoLib/JsfWeb/target/
 /7-ejb/atividade/EjbCalculadora/target/
+/8-java-redes/webconf-server/ServerSocketTcp/target/
